$Id$

NOTE: This is the 1.3.X development branch.
Put code changes right below the 1.3.0+CVS label below.

Version 1.3.0+CVS (?? ??? 2007)
 - 21-Oct-09 bb Updating includes/config.php and the SQL files to V1.2.0
 - 19-Oct-09 bb Patch [ 2880387 ] Viewing other user's calendar when user access cntrl is off
 - 19-Oct-09 bb Extracting CSS & Javascript from about.php to external files.
   New script file js/v_h_scrolls.js allows multiple scrollers.
 - 15-Oct-09 bb Remove excess styles
 - 14-Oct-09 bb Patch [ 1753426 ] layerentrys aren't marked as entrys (no hasevent class)
 - 14-Oct-09 bb Patch [ 1425442 ] case-insensitive user names
 - 12-Oct-09 bb Patch [ 2877076 ] Fix some off by one dates due to daylight saving
 - 12-Oct-09 bb Patch [ 2666115 ] Patch for bug#2666101, icalclient htaccess method
 - 12-Oct-09 bb Patch [ 2697525 ] German translation corrections
 - 12-Oct-09 bb Patch [ 2770045 ] Access.php error - You are not authorized
 - 12-Oct-09 bb Patch [ 2777127 ] Patch for bug 2318177, report options not saving/displaying
 - 12-Oct-09 bb Patch [ 2782298 ] Users selection shifts
 - 12-Oct-09 bb <script language="javascript" was deprecated years ago
 - 12-Oct-09 bb Patch [ 2794125 ] Import Categories
 - 12-Oct-09 bb Patch [ 2801019 ] Fix bug that prevent event approval
 - 11-Oct-09 bb Patch [ 2802940 ] Allow public access in http authentication mode
 - 11-Oct-09 bb Patch [ 2809120 ] Allow rejection of a previously approved event
 - 11-Oct-09 bb Patch [ 2839645 ] Bugfix for the installation when language character != UTF-8
 - 10-Oct-09 bb Patch [ 2840937 ] Better error reporting for Oracle support in dbi4php.php
 - 10-Oct-09 bb Patch [ 2873491 ] Get rid of PHP 5.3 deprecated features
 - 10-Oct-09 bb Example of a good table summary="" in function display_month
 - Patch [ 2534090 ] PHP 5.2.8/Seg fault/blank page/Internal Server Error/untimed
 - Patch [ 2477178 ] New french translation
 - Patch [ 2269623 ] Configure default client timezone