@@ -4,10 +4,12 @@ NOTE: This is the 1.3.X development branch.
 Put code changes right below the 1.3.0+CVS label below.
 
 Version 1.3.0+CVS (?? ??? 2007)
+ - 30-Oct-09 bb Back out Patch [ 1425442 ] case-insensitive user names
+   Incomplete. Pre-existing usernames with Uppercase are not retrieved correctly.
  - 21-Oct-09 bb Updating includes/config.php and the SQL files to V1.2.0
  - 19-Oct-09 bb Patch [ 2880387 ] Viewing other user's calendar when user access cntrl is off
  - 19-Oct-09 bb Extracting CSS & Javascript from about.php to external files.
-   New script file js/v_h_scrolls.js allows multiple scrollers.
+   New script file js/v_h_scrolls.js allows multiple scrollers per page.
  - 15-Oct-09 bb Remove excess styles
  - 14-Oct-09 bb Patch [ 1753426 ] layerentrys aren't marked as entrys (no hasevent class)
  - 14-Oct-09 bb Patch [ 1425442 ] case-insensitive user names
